--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,1 +1,65 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Política de Privacidad - FoE Tools & Tips</title>
+<style>
+body { font-family: Arial, sans-serif; max-width: 800px; margin: 40px auto; line-height: 1.6; color: #333; }
+h1, h2 { color: #2b4b80; }
+a { color: #2b4b80; }
+</style>
+</head>
+<body>
+
+<h1>Política de Privacidad</h1>
+<p>Última actualización: 6 de octubre de 2025</p>
+
+<p>Esta Política de Privacidad describe cómo la aplicación <strong>FoE Tools & Tips</strong>, desarrollada por <strong>StudioCV</strong> (“nosotros”, “nuestro” o “la aplicación”), recopila, utiliza y protege la información de los usuarios. Si tienes alguna duda, puedes contactarnos en <a href="mailto:bestcodecv@gmail.com">bestcodecv@gmail.com</a>.</p>
+
+<h2>1. Información que recopilamos</h2>
+<p>La aplicación no solicita datos personales sensibles ni requiere registro. Sin embargo, se pueden recopilar datos técnicos y publicitarios de manera automática mediante servicios de terceros:</p>
+<ul>
+  <li><strong>Start.io (StartApp):</strong> recopila identificadores publicitarios (por ejemplo, Advertising ID de Google) y datos no personales (ubicación aproximada, tipo de dispositivo, idioma, país, tipo de conexión) para mostrar anuncios relevantes.</li>
+  <li><strong>Google Play Services:</strong> recopila datos técnicos necesarios para el correcto funcionamiento, estadísticas y actualizaciones automáticas de la aplicación.</li>
+</ul>
+
+<h2>2. Uso de la información</h2>
+<p>La información recopilada se utiliza únicamente para:</p>
+<ul>
+  <li>Mostrar anuncios personalizados o no personalizados, según el consentimiento del usuario.</li>
+  <li>Analizar el uso y rendimiento de la aplicación para mejorar su experiencia.</li>
+</ul>
+
+<h2>3. Consentimiento del usuario (GDPR y otras normativas)</h2>
+<p>Los usuarios ubicados en la Unión Europea u otras regiones que requieran consentimiento podrán elegir si desean recibir anuncios personalizados. Si el usuario no consiente, se mostrarán anuncios no personalizados o genéricos.</p>
+
+<h2>4. Menores de edad</h2>
+<p>La aplicación está dirigida a mayores de 13 años. No recopilamos deliberadamente información personal de menores. Si eres padre, madre o tutor y crees que tu hijo nos ha proporcionado datos personales, contáctanos para eliminarlos.</p>
+
+<h2>5. Compartición de información</h2>
+<p>Los datos pueden ser compartidos con los siguientes servicios:</p>
+<ul>
+  <li><strong>Start.io (StartApp):</strong> para la publicación de anuncios.</li>
+  <li><strong>Google Play:</strong> para distribución y actualizaciones.</li>
+</ul>
+
+<h2>6. Seguridad de la información</h2>
+<p>Aplicamos medidas razonables para proteger la información no personal del acceso, uso o divulgación no autorizada. Sin embargo, ningún método de transmisión por Internet es completamente seguro.</p>
+
+<h2>7. Enlaces a terceros</h2>
+<p>La aplicación puede incluir enlaces a sitios o recursos externos. No somos responsables del contenido o prácticas de privacidad de dichos sitios.</p>
+
+<h2>8. Cambios en esta política</h2>
+<p>Podemos actualizar esta Política de Privacidad ocasionalmente. Cualquier cambio será publicado en esta misma página con la nueva fecha de actualización.</p>
+
+<h2>9. Contacto</h2>
+<p>Si tienes preguntas sobre esta política o deseas ejercer tus derechos de privacidad, escríbenos a:  
+<a href="mailto:bestcodecv@gmail.com">bestcodecv@gmail.com</a></p>
+
+<hr>
+<p><small>© 2025 StudioCV — Todos los derechos reservados.</small></p>
+
+</body>
+</html>
 
