--- a/terms.html
+++ b/terms.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Términos y Condiciones - FoE Tools & Tips</title>
+<style>
+body { font-family: Arial, sans-serif; max-width: 800px; margin: 40px auto; line-height: 1.6; color: #333; }
+h1, h2 { color: #2b4b80; }
+a { color: #2b4b80; }
+</style>
+</head>
+<body>
+
+<h1>Términos y Condiciones</h1>
+<p>Última actualización: 6 de octubre de 2025</p>
+
+<p>Bienvenido a <strong>FoE Tools & Tips</strong>, una aplicación desarrollada por <strong>StudioCV</strong>. Al utilizar esta aplicación, aceptas estos Términos y Condiciones. Si no estás de acuerdo con alguno de ellos, por favor no uses la aplicación.</p>
+
+<h2>1. Uso de la aplicación</h2>
+<p>FoE Tools & Tips está diseñada para ofrecer herramientas, guías y consejos relacionados con el juego FoE. Esta aplicación no está afiliada, patrocinada ni aprobada por InnoGames GmbH. Todo el contenido es de carácter informativo y educativo.</p>
+
+<h2>2. Publicidad</h2>
+<p>La aplicación puede mostrar anuncios proporcionados por Start.io u otras redes publicitarias. Al usar la aplicación, aceptas la posibilidad de visualizar publicidad y reconoces que estos anuncios pueden variar según tu ubicación y preferencias.</p>
+
+<h2>3. Limitación de responsabilidad</h2>
+<p>No nos hacemos responsables de daños directos o indirectos derivados del uso o imposibilidad de uso de la aplicación, errores en los datos mostrados o interrupciones del servicio.</p>
+
+<h2>4. Modificaciones del servicio</h2>
+<p>Podemos modificar, suspender o descontinuar cualquier parte de la aplicación sin previo aviso. También podemos actualizar estos términos cuando sea necesario, y se aplicarán desde su publicación.</p>
+
+<h2>5. Privacidad</h2>
+<p>El uso de esta aplicación también está sujeto a nuestra <a href="privacy-policy.html">Política de Privacidad</a>.</p>
+
+<h2>6. Contacto</h2>
+<p>Si tienes preguntas sobre estos Términos y Condiciones, puedes escribirnos a:  
+<a href="mailto:bestcodecv@gmail.com">bestcodecv@gmail.com</a></p>
+
+<hr>
+<p><small>© 2025 StudioCV — Todos los derechos reservados.</small></p>
+
+</body>
+</html>
 
