--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -35,8 +35,14 @@ a { color: #2b4b80; }
 <p>Los usuarios ubicados en la Unión Europea u otras regiones que requieran consentimiento podrán elegir si desean recibir anuncios personalizados. Si el usuario no consiente, se mostrarán anuncios no personalizados o genéricos.</p>
 
 <h2>4. Menores de edad</h2>
-<p>La aplicación está dirigida a mayores de 13 años. No recopilamos deliberadamente información personal de menores. Si eres padre, madre o tutor y crees que tu hijo nos ha proporcionado datos personales, contáctanos para eliminarlos.</p>
-
+<p>
+La aplicación está dirigida a usuarios mayores de 13 años. 
+No solicitamos, recopilamos ni almacenamos de manera directa ningún tipo de información personal identificable de los usuarios, ya sean menores o adultos.
+Cualquier dato relacionado con publicidad o estadísticas es gestionado exclusivamente por los servicios externos integrados (por ejemplo, Start.io), conforme a sus propias políticas de privacidad.
+En caso de que un padre, madre o tutor tenga alguna inquietud sobre la información que pudiera ser procesada por dichos servicios, puede contactarnos en 
+<a href="mailto:bestcodecv@gmail.com">bestcodecv@gmail.com</a> y haremos lo posible por orientar o facilitar el proceso correspondiente con el proveedor.
+</p>
+  
 <h2>5. Compartición de información</h2>
 <p>Los datos pueden ser compartidos con los siguientes servicios:</p>
 <ul>
